style.css
@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
* {
  margin: 0;
  padding: 0;
}

html {
  overflow-x: hidden;
}

.header {
  height: 100vh;
  background-image: url('bg.jpeg');
  background-size: cover;
  background-color: darkslateblue;
  width: 100%;
  box-shadow: black 0 0 15px;
  z-index: 3;
  width: 100vw;
}

.content {
  position: absolute;
  text-align: center;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: fit-content;
}

.seethrough {
  background-color: rgba(0, 0, 0, 0.5);
  padding: 30px;
  border-radius: 2px;
}

h1 {
  font-family: 'Assistant';
  color: white;
  letter-spacing: 3px;
  font-size: 3em;
  font-weight: 200;
}

h2 {
  font-family: 'Assistant', sans-serif;
  color: white;
  letter-spacing: 1.5px;
  font-size: 1.5em;
  margin-top: 15px;
  font-weight: 200;
}


video {
  max-width: 100vw;
}

.about-shade {
  position: absolute;
  top: 100vh;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.7);
  text-align: center;
}

p {
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  width: 40%;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  color: white;
  font-weight: 400;
}

.contact {
  position: absolute;
  top: 200vh;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-image: url('contact.jpg');
  background-size: cover;
}

.darker {
  background-color: rgba(0, 0, 0, 0.75);
}

i {
  margin: 10px;
  font-size: 32px;
  color: white;
}

#modal {
  display: none;
  position: fixed;
  height: 100vh;
  width: 100vw;
  background-color: rgba(0,0,0,0.86);
  z-index: 4;
  top: 0;
  left: 0;
}

#modalContent {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 5;
}

